Fix the species assembly count alignment

--- a/src/content/app/species/components/species-title-area/SpeciesTitleArea.module.css
+++ b/src/content/app/species/components/species-title-area/SpeciesTitleArea.module.css
@@ -41,6 +41,7 @@
 }
 
 .assemblyCountWrapper {
+  align-items: center;
   display: inline-flex;
   grid-area: assembly-count;
   justify-content: space-around;
